crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__minute__multiple__specifier_periodic__specifier.snap
---
source: crates/tools/cron/src/tests/unit/minute.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Invalid(
                    "/2,1",
                    '-',
                ),
                Nom(
                    "1/2,1",
                    Alt,
                ),
            ],
        },
    ),
)
